connection added to register and login

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <legend>
 Enter Details
 </legend> 
-<form method="POST" action="#"> 
+<form method="POST" action='{% url "register" %}'> 
 Name <br><input type="text" name="name" size="40"><br> 
 Password<br><input type="password" name="password" size="40"><br>
 Email<br><input type="text" name="email" size="40">
