--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 
     <h3>Login here</h3>
 
-    <form method="POST" action="#">
+    <form method="POST" action='{% url "login" %}'>
         {% csrf_token %}
 
         <input type="text" placeholder="name" name="name"><br>
