html page added

--- a/templates/test.html
+++ b/templates/test.html
@@ -1,1 +1,43 @@
-<h1> Succesful Login </h1>
+<html>
+<head>
+<style> 
+.div1 {
+  width: 300px;
+  height: 100px;
+  padding: 50px;
+  border: 1px solid blue;
+  box-sizing: border-box;
+}
+
+.div2 {
+  width: 300px;
+  height: 100px;
+  padding: 50px;  
+  border: 1px solid red;
+  box-sizing: border-box;
+}
+
+.div3 {
+    width: 300px;
+    height: 100px;
+    padding: 50px;
+    border: 1px solid green;
+    box-sizing: border-box;
+}
+</style>
+</head>
+<body>
+
+<div class="div1">All Post</div>
+<button type="button" onclick="alert('Hello world!')">Click Me!</button>
+<br>
+<br>
+<div class="div2">Create Post</div>
+<button type="button" onclick="alert('Hello world!')">Click Me!</button>
+<br>
+<br>
+<div class="div3">My Post</div>
+<button type="button" onclick="alert('Hello world!')">Click Me!</button>
+
+</body>
+</html>
