--- a/templates/mypost.html
+++ b/templates/mypost.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>All Posts</title>
+    <title>My Posts</title>
 </head>
 <body>
     <h1>All Blogs Here</h1>
