--- a/templates/allpost.html
+++ b/templates/allpost.html
@@ -6,12 +6,14 @@
 </head>
 <body>
     <h1>All Blogs Here</h1>
+    {% for all_post in all_post %}
     <p>
-        {{ blog_data.title}}
-        {{ blog_data.body }}
-        {{ blog_data.author }}
-        {{ blog_data.author_id }}
+        {{ all_post.title}}
+        {{ all_post.body }}
+        {{ all_post.author }}
+        {{ all_post.author_id }}
     </p>
+    {% endfor %}
      <a href="/">logout</a>
 </body>
 </html>
