--- a/templates/test.html
+++ b/templates/test.html
@@ -48,7 +48,9 @@
     window.location.href = "{% url 'createpage' %}"
   }
 </script>
-
+<br></br>
+<br></br>
+<a type="button" href="{% url 'logout' %}">Logout</a>
 
 </body>
 </html>
